# Questopia

./: .gitignore  LICENCE  NOTICE  README.md  build.gradle  gradle.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android-build.yml  android-test.yml  android.yml  codeql.yml
PrettyFilePicker/: build.gradle
PrettyFilePicker-android-library/: build.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about-en.html  about-ru.html
app/src/main/jni/: Android.mk  CMakeLists.txt  androidqspwrapper.c
app/src/main/jni/onig/: CMakeLists.txt
app/src/main/jni/qsp-5.7/: Android.mk  CMakeLists.txt  androidqpwrapper.c  androidqspwrapper.c
app/src/main/jni/qsp-5.7/qsp/: declarations.h
app/src/main/jni/qsp-5.7/qsp/bindings/android/: android.h  android_coding.c  android_control.c
app/src/main/jni/qsp-5.7/src/: actions.c  actions.h  callbacks.c  callbacks.h  codetools.c  codetools.h  coding.c  coding.h  common.c  declarations.h  errors.c  errors.h  game.c  locations.c  locations.h  mathops.c  mathops.h  menu.c  menu.h  objects.c  playlist.c  statements.c  statements.h  text.c  text.h  time.c  towlower.c  towupper.c  variables.c  variables.h  variant.c  variant.h
app/src/main/jni/qsp-5.7/src/bindings/: bindings_config.h  qsp.h
app/src/main/jni/qsp-5.7/src/bindings/android/: android.h  android_callbacks.c  android_coding.c  android_control.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
materialbanner-library/: build.gradle
(+773 files in other folders)
